# igni-render

./: LICENSE  Makefile.am  Makefile.in  README.md  configure  configure.ac  igni-render.pc.in  testrun
src/: Makefile.am  Makefile.in  config.h.in  main.c  main.h
src/common/: maths.c  maths.h
src/input/: queuecmd.c  queuecmd.h  socket.c  socket.h
src/render/: display.c  display.h  misc.c  misc.h  pass.c  pass.h  physdev.c  physdev.h  scene.c  scene.h  swapchain.c  swapchain.h  sync.c  sync.h
src/shader/: compile.sh
